Got the circles to align properly now just need the paragraph to have a fixed width.

--- a/microwave.css
+++ b/microwave.css
@@ -195,6 +195,7 @@ figcaption span
 
 section#portfolio > div:last-child
 {
+	/*	When we made this by a % the interior child widths were meaningless */
 	/*width: 90%;*/
 	/*height: 7em;*/
 	padding: 1em;
@@ -221,9 +222,10 @@ section#portfolio > div:last-child li
 /* Contains the circles */
 #portfolio > div:last-child div
 {
-  display: inline-block;
-  margin: 0 auto;
-  width: 55em;
+	display: inline-block;
+	margin: 0 auto;
+	width: 55em;
+	vertical-align: middle;
 }
 
 #rightArrow, #leftArrow
